--- a/public/Home/Home.css
+++ b/public/Home/Home.css
@@ -1,7 +1,7 @@
 #eventMap { 
 	margin-bottom: 90px;
-	padding: 0px;
-	top: 140px;
+	padding-bottom: 0px;
+	top: 50px;
 	position: relative;
 	border: 1px solid gray;
 	padding-left: 10px;
