--- a/public/TheBasics/TheBasics.css
+++ b/public/TheBasics/TheBasics.css
@@ -1,8 +1,8 @@
 #brewingEquipmentMap { 
-	top: 140px;
+	margin-bottom: 90px;
+	top: 50px;
 	position: relative;
 	border: 1px solid gray;
-	border-radius: 7px;
 	padding-left: 10px;
 	width: 100%;
 	height: 500px; 
